Add MDEV-25999 & MDEV-36840 to MDEV-16091’s test

1. Stricten MDEV-16091’s `rpl.rpl_seconds_behind_master_spike`
   to prove that its fix covered MDEV-25999 as well
2. Add a Parallel Replication variant
   `rpl_seconds_behind_master_spike-parallel` to reproduce MDEV-36840

Because Parallel Replication queues Format Description Events as
Position Update metaevents, the two variants use different breakpoints.
To support them, this commit replaces the MDEV-10653 patch 8dad51481b
with a live-activation solution. In contrast, previous iterations queued
the activation pre-test and relied on other factors to enable the break.